--- a/views/location.ejs
+++ b/views/location.ejs
@@ -24,7 +24,7 @@
 
         <div class="separator"></div>
 
-        <h2>The Venue</h2>
+        <h1>The Venue</h1>
         <p>
           Our conference venue is <a target="_blank" href="http://www.fabrikken.no/">Fabrikken</a>, located in the newly constructed
           area, <a target="_blank" href="http://www.vulkanoslo.no/">Vulkan</a>
@@ -54,33 +54,31 @@
             <a id="togleButtonMap" class="toglerButton" href="#locationmap"><span>Map</span></a>
         </div>
 
-        <div class="separator"></div>
-
         <h2>Getting there</h2>
-        <p>The address is <a href="https://maps.google.com/maps?q=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.922366,10.753341&sspn=0.003699,0.013078&dirflg=w&hq=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&t=m&z=15"><strong>Maridalsveien 13-17</strong></a></p>
+        <p>The address to the venue is <a href="https://maps.google.com/maps?q=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.922366,10.753341&sspn=0.003699,0.013078&dirflg=w&hq=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&t=m&z=15">Maridalsveien 13-17</a>.</p>
 
-        <strong>Walking</strong>
+        <h3>Walking</h3>
         <p>
           You can <a
           href="http://www.vulkanoslo.no/download.aspx?object_id=9A47978347B74EF395B7CCAF545A16E2.pdf">download
           a map</a> created by the owners of a venue nearby.
         </p>
 
-        <strong>Tram (Recommended)</strong>
+        <h3>Tram</h3>
         <p>
           Tram lines 11, 12 and 13 all stop at <em>Schous plass</em>, where
           you can walk down Nordregate and across the bridge to
           Vulkan. <a href="https://maps.google.com/maps?saddr=Schous+plass+%4059.920807,10.759322&daddr=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.921947,10.759327&sspn=0.007399,0.026157&geocode=FadRkgMdmiykAA%3BFWBZkgMdpg2kACkxFrWeZW5BRjFlM5P44AGB6w&mra=ls&t=m&z=17">Get directions</a>.
         </p>
 
-        <strong>Bus</strong>
+        <h3>Bus</h3>
         <p>
           Buses 34 and 54 stop at <em>M&oslash;llerveien</em>. Walk down
           M&oslash;llerveien and make a left at Dansens Hus.
           <a href="https://maps.google.com/maps?saddr=Maridalsveien&daddr=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&ll=59.921904,10.753341&spn=0.003699,0.013078&sll=59.920302,10.752321&sspn=0.0037,0.013078&geocode=FeVQkgMd5A2kAA%3BFWBZkgMdpg2kACkxFrWeZW5BRjFlM5P44AGB6w&dirflg=w&mra=mift&mrsp=0&sz=17&t=m&z=17">Get directions.</a>
         </p>
 
-        <strong>Taxi</strong>
+        <h3>Taxi</h3>
         <p>
           The address is <em>Maridalsveien 13-17</em>. Please note
           that taxi fares in Norway are quite expensive.
@@ -107,7 +105,7 @@
 
         <div class="separator"></div>
 
-        <h2>From Oslo Airport</h2>
+        <h2>To and from Oslo Airport</h2>
         <p>
           Whatever you do, don't grab a taxi from the
           airport&mdash;it's a really long and expensive ride. The
@@ -129,7 +127,7 @@
           venue:
         </p>
 
-        <strong><a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Scandic Hotel Vulkan</a></strong>
+        <h3><a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Scandic Hotel Vulkan</a></h3>
         <p>
           Scandic Hotel Vulkan is the Web Rebels 2013 hotel partner.
           This is a modern hotel right next door to the venue. By
@@ -139,14 +137,14 @@
           used at this hotel.
         </p>
 
-        <strong><a href="http://www.pshotell.no/">PS:Hotell</a></strong>
+        <h3><a href="http://www.pshotell.no/">PS:Hotell</a></h3>
         <p>
           We're also happy that there is a cheaper hotel at the
           premises, just 20-30m from the venue, which has extremely
           low prices.
         </p>
 
-        <strong><a href="http://www.comforthotelxpress.no/">Comfort Hotel xPress Oslo</a></strong>
+        <h3><a href="http://www.comforthotelxpress.no/">Comfort Hotel xPress Oslo</a></h3>
         <p>
           One of the coolest new hotels in the city, similar to the
           <a href="http://yotel.com">Yotel concept</a> in other cities.
@@ -157,6 +155,7 @@
         </p>
 
         <div class="separator"></div>
+
         <h2>Splurge</h2>
         <p>
           If your company's paying anyway why not splurge? Unlike most other things in Norway, hotels in Oslo are
