--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -15,7 +15,9 @@
 
     <article class="wrap">
         <h1>Speakers</h1>
-        <p>There will be in total 16 speakers during the two main days of Web Rebels. Please note that we also run an <a href="/openmic/">Open Mic</a> night where you as an attendee can be the speaker.</p>
+        <p>There will be in total 16 speakers during the two main days of Web Rebels. Please note that we also run an <a href="/openmic/">Open Mic Night</a> where you as an attendee can be the speaker.</p>
+
+        <div class="separator"></div>
 
         <a name="bodil"></a>
         <div class="speaker">
