--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -19,7 +19,7 @@
 
         <div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=3153505219&ref=etckt&v=2" frameborder="0" height="168" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe></div>
 
-        <h2>This is Included in Your Ticket</h2>
+        <h2>This is included in your ticket</h2>
         <p>
           When you attend the Web Rebels Conference, you're our guest
           and we will take care of you. We work very hard to make sure
@@ -27,22 +27,28 @@
           rest.
         </p>
 
+        <p>Your ticket entitles you to:</p>
+
+        <ul>
+          <li>Entrance to the conference</li>
+          <li>Entrance to the <a href="/openmic">Open Mic Night</a></li>
+          <li>Full buffet breakfast both conference days</li>
+          <li>Full lunch both conference days</li>
+          <li>Full dinner day one of the conference</li>
+          <li>Continuous delivery of coffee / tea during the conference</li>
+          <li>Access to the conference party at the end of day one</li>
+          <li>A decent amount of free beverages (beer, wine, mineralwater) during the conference party</li>
+        </ul>
+        
         <p>
-          Entrance to the conference and the
-          <a href="/openmic">Open Mic Night</a>.
+          We know that our speakers will be great and you will not go hungry during the
+          conference. 
         </p>
         <p>
-          Buffet breakfast both days and lunch both days. Dinner one
-          day one and continuous delivery of coffee / tea plus. In
-          other words, you will not need to buy any food during the
-          conference.
+          We put pride in making sure you have the best entertainment during
+          the after party and access to a good selection of micro brewery beers (just checkout the <a href="http://webrebels.tumblr.com/post/24346798911/were-doing-the-accounting-thing-these-days-and">selection of beverages consumed at last years party</a>) too choose from.
         </p>
-        <p>
-          Access to the conference party at the end of day one. Each
-          attendee will be given a decent amount of free beverages
-          where one can choose between a wide selection of micro
-          brewery beers (just checkout the <a href="http://webrebels.tumblr.com/post/24346798911/were-doing-the-accounting-thing-these-days-and">selection of beverages consumed at last years party</a>), wine or mineral water.
-        </p>
+
     </article>
 
     <% include snips/footer.ejs %>
