--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -21,7 +21,7 @@
 
         <a name="bodil"></a>
         <div class="speaker">
-            <img class="imageFrame" src="../gfx/speaker_bodil.jpg">
+            <img class="imageFrame" height="140" width="140" alt="Bodil Stokke" src="../gfx/speaker_bodil.jpg">
             <h2>Bodil Stokke</h2>
             <p><a href="http://bodil.org/">Bodil</a> is a developer, frequent speaker and occasional teacher of web technology and the dark realm of Lisp. She is currently leading the web dev team at <a href="http://arktekk.no/">Arktekk</a>. She is best known as the creator of the <a href="http://catnipide.com/">Catnip IDE</a>, and for her contributions to the field of programming language theory, especially the <a href="http://bodil.org/coffeescript/#the-secret-slide">Facial Hair Theory of Language Design</a>. She holds a doctorate in Metaphysics from <a href="http://www.themonastery.org/catalog/drofmetaphysicscertificate-p-116.html">ULC</a>, and her favourite pony is <a href="http://www.youtube.com/watch?v=cDuG95DXbw8">Rainbow Dash</a>.</p>
         </div>
@@ -30,7 +30,7 @@
 
         <a name="david"></a>
         <div class="speaker">
-            <img class="imageFrame" src="../gfx/speaker_david.jpg">
+            <img class="imageFrame" height="140" width="140" alt="David Nolen" src="../gfx/speaker_david.jpg">
             <h2>David Nolen</h2>
             <p><a href="http://dosync.posterous.com/">David Nolen</a> is a JavaScript developer at The New York Times and helps run the <a href="http://kitchentablecoders.com/">Kitchen Table Coders</a> workshops in Brooklyn. David spends far too much of his free time having fun hacking on <a href="https://github.com/clojure/core.logic">core.logic</a>, <a href="https://github.com/clojure/core.match">core.match</a>, and <a href="https://github.com/clojure/clojurescript">ClojureScript</a>.</p>
         </div>
@@ -39,7 +39,7 @@
 
         <a name="garann"></a>
         <div class="speaker">
-            <img class="imageFrame" src="../gfx/speaker_garann.jpg">
+            <img class="imageFrame" height="140" width="140" alt="Garann Means" src="../gfx/speaker_garann.jpg">
             <h2>Garann Means</h2>
             <p><a href="http://garann.com/">Garann</a> is a JavaScript developer from Austin, Texas, USA. Before switching back to the front-end, she worked for many years as a back-end and full-stack developer. She works for Etsy, is the author of <a href="http://shop.oreilly.com/product/0636920023258.do">Node for Front-End Developers</a>, and is the organizer of <a href="http://www.meetup.com/Austin-All-Girl-Hack-Night/">Austin All-Girl Hack Night</a> and <a href="http://www.meetup.com/Girl-Develop-It-Austin/">Girl Develop It Austin</a>.</p>
         </div>
@@ -48,7 +48,7 @@
 
         <a name="jan"></a>
         <div class="speaker">
-            <img class="imageFrame" src="../gfx/speaker_jan.jpg">
+            <img class="imageFrame" height="140" width="140" alt="Jan Lenhardt" src="../gfx/speaker_jan.jpg">
             <h2>Jan Lenhardt</h2>
             <p><a href="http://jan.prima.de/">Jan Lehnardt</a> is an Open Source developer. He works on all parts of the web stack and tries to make things easier for everyone. He’s a core contributor to <a href="http://couchdb.apache.org/">Apache CouchDB</a>, a co-curator for <a href="jsconf.eu">JSConf EU</a> and lives in Berlin.</p>
         </div>
@@ -57,7 +57,7 @@
 
         <a name="mario"></a>
         <div class="speaker">
-            <img class="imageFrame" src="../gfx/speaker_mario.jpg">
+            <img class="imageFrame" height="140" width="140" alt="Dr.-Ing. Mario Heiderich" src="../gfx/speaker_mario.jpg">
             <h2>Dr.-Ing. Mario Heiderich</h2>
             <p><a href="http://mario.heideri.ch/">Mario Heiderich</a> is a Microsoft security contractor and founder of the German/UK pen-test outfit <a href="http://cure53.de/">Cure53</a>. He focuses on HTML5, SVG security and believes XSS can be eradicated by using JavaScript. Maybe. Some day.</p>
 
@@ -70,7 +70,7 @@
 
         <a name="reginald"></a>
         <div class="speaker">
-            <img class="imageFrame" src="../gfx/speaker_reginald.jpg">
+            <img class="imageFrame" height="140" width="140" alt="Reginald Braithwaite" src="../gfx/speaker_reginald.jpg">
             <h2>Reginald Braithwaite</h2>
             <p><a href="http://braythwayt.com/">Reginald Braithwaite</a> has more than twenty years of hands-on experience creating software products. He applies his Ruby, JavaScript, CoffeeScript, and advanced programming expertise to crafting well-factored and maintainable code. He speaks and <a href="https://github.com/raganwald/homoiconic">writes</a> about not-so-big design and dynamic meta-programming. Open source accomplishments include <a href="http://recursiveuniver.se/docs/cafeaulife.html">Cafe au Life</a> and <a href="https://github.com/raganwald/YouAreDaChef">YouAreDaChef</a>, in JS/CS, the <a href="http://andand.rubyforge.org/">andand gem for Ruby</a>, and the <a href="https://github.com/raganwald/JQuery-Combinators">jQuery Combinators plugin</a>.</p>
         </div>
