--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,10 +14,9 @@
   <% include snips/menu.ejs %>
 
     <article class="wrap">
-        <a href="http://www.flickr.com/photos/webrebels/7280977004/">
-            <img class="imageFrame" src="/gfx/lagbilde_color.jpg">
-        </a>
-
+        
+        <img class="poster" src="/gfx/b12.jpg" width="680" height="350">
+        
         <h1>About the Web Rebels Conference</h1>
         <p>
             The Web Rebels conference takes place on the 23&ndash;24th
