--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -107,6 +107,8 @@
             </a>
         </article>
 
+        <div class="separator tba"></div>
+
         <article class="slot row_a tba">
             <a href="/speakers/#">
                 <div class="img"></div>
