--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -6,6 +6,7 @@
             <a class="sponsor arktekk" href="http://arktekk.no"></a>
             <a class="sponsor finn" href="http://finn.no"></a>
             <a class="sponsor bekk" href="http://bekk.no"></a>
+            <a class="sponsor comoyo" href="http://comoyo.no"></a>
         </section>
 
         <aside>
