--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -7,6 +7,7 @@
             <a class="sponsor finn" href="http://finn.no"></a>
             <a class="sponsor bekk" href="http://bekk.no"></a>
             <a class="sponsor comoyo" href="http://comoyo.no"></a>
+            <a class="sponsor knowit" href="http://knowit.no"></a>
         </section>
 
         <aside>
