Fixed logo sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,10 +183,12 @@ td ul {
 }
 .sponsor.comoyo {
     background:                     url("/gfx/sponsors/sponsor-comoyo.png") no-repeat center center;
+    background-size:                80%;
     background-color:               rgb(255, 255, 255);
 }
 .sponsor.knowit {
     background:                     url("/gfx/sponsors/sponsor-knowit.png") no-repeat center center;
+    background-size:                80%;
     background-color:               rgb(255, 255, 255);
 }
 /* Frontpage */
