--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -18,7 +18,8 @@
         <h1>Schedule</h1>
         <p>This is the outline for the conference. More speakers will be added continously up until the event.</p>
 
-        <table class="schedule" id="dayI">
+        <a name="openmic"></a>
+        <table class="schedule" id="openmic">
             <tr>
                 <th colspan="3">22nd of May - Pre party</th>
             </tr>
@@ -64,6 +65,7 @@
             </tr>
         </table>
 
+        <a name="dayI"></a>
         <table class="schedule" id="dayI">
             <tr>
                 <th colspan="3">23rd of May - Conference Day I</th>
@@ -135,6 +137,7 @@
             </tr>
         </table>
 
+        <a name="dayII"></a>
         <table class="schedule" id="dayII">
             <tr>
                 <th colspan="3">24th of May - Conference Day II</th>
@@ -203,6 +206,16 @@
                 <td class="time">17:00</td>
                 <td class="title">Group photo</td>
                 <td class="additional"> </td>
+            </tr>
+        </table>
+
+        <a name="appday"></a>
+        <table class="schedule" id="appday">
+            <tr>
+                <th colspan="3">25th of May - FireFox OS Application Hack Day</th>
+            </tr>
+            <tr>
+                <td>Our main sponsor, Comoyo, will host a full day <a href="http://www.mozilla.org/en-US/firefox/partners/#os">FireFox OS</a> application hack day. Full schedule with speakers, activities and location for this event will be published later.</td>
             </tr>
         </table>
 
