--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -65,10 +65,10 @@
             </a>
         </article>
 
-        <article class="slot row_a tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_a">
+            <a href="/speakers/#robert">
+                <div class="img" style="background-image: url(/gfx/front_robert.jpg);"></div>
+                <h2>Robert Nyman</h2>
             </a>
         </article>
 
