--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -75,6 +75,15 @@
             <p><a href="http://braythwayt.com/">Reginald Braithwaite</a> has more than twenty years of hands-on experience creating software products. He applies his Ruby, JavaScript, CoffeeScript, and advanced programming expertise to crafting well-factored and maintainable code. He speaks and <a href="https://github.com/raganwald/homoiconic">writes</a> about not-so-big design and dynamic meta-programming. Open source accomplishments include <a href="http://recursiveuniver.se/docs/cafeaulife.html">Cafe au Life</a> and <a href="https://github.com/raganwald/YouAreDaChef">YouAreDaChef</a>, in JS/CS, the <a href="http://andand.rubyforge.org/">andand gem for Ruby</a>, and the <a href="https://github.com/raganwald/JQuery-Combinators">jQuery Combinators plugin</a>.</p>
         </div>
 
+        <div class="separator"></div>
+
+        <a name="robert"></a>
+        <div class="speaker">
+            <img class="imageFrame" height="140" width="140" alt="Robert Nyman" src="../gfx/speaker_robert.jpg">
+            <h2>Robert Nyman</h2>
+            <p><a href="https://twitter.com/robertnyman">Robert</a> is a Technical Evangelist for Mozilla and the Editor of <a href="https://hacks.mozilla.org/">Mozilla Hacks</a>. He's a strong believer in HTML5 and the Open Web, has been working since 1999 with Front End development for the web - in Sweden and in New York City. He regularly <a href="http://robertnyman.com">blogs</a> and loves to travel and meet people.</p>
+        </div>
+
     </article>
 
     <% include snips/footer.ejs %>
