--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -72,10 +72,10 @@
             </a>
         </article>
 
-        <article class="slot row_b tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_b">
+            <a href="/speakers/#addy">
+                <div class="img" style="background-image: url(/gfx/front_addy.jpg);"></div>
+                <h2>Addy Osmani</h2>
             </a>
         </article>
 
