--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -15,7 +15,7 @@
             <a href="http://flickr.com/webrebels">Flickr</a>
             <a href="http://lanyrd.com/2013/webreb/">Lanyrd</a>
             <a href="https://vimeo.com/channels/wr2012">Vimeo</a>
-            <a href="http://twitter.com/">Twitter</a>
+            <a href="https://twitter.com/web_rebels">Twitter</a>
         </aside>
     </div>
 </footer>
