--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -212,10 +212,10 @@
         <a name="appday"></a>
         <table class="schedule" id="appday">
             <tr>
-                <th colspan="3">25th of May - FireFox OS Application Hack Day</th>
+                <th colspan="3">25th of May - Firefox OS Application Hack Day</th>
             </tr>
             <tr>
-                <td>Our main sponsor, Comoyo, will host a full day <a href="http://www.mozilla.org/en-US/firefox/partners/#os">FireFox OS</a> application hack day. Full schedule with speakers, activities and location for this event will be published later.</td>
+                <td>Our main sponsor, Comoyo, will host a full day <a href="http://www.mozilla.org/en-US/firefox/partners/#os">Firefox OS</a> application hack day. Full schedule with speakers, activities and location for this event will be published later.</td>
             </tr>
         </table>
 
