--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -25,7 +25,7 @@
             <h2>Addy Osmani</h2>
             <p><a href="https://twitter.com/addyosmani">Addy</a> is a Developer Programs Engineer at Google who prolifically speaks and writes about JavaScript on a weekly basis. His material covers everything from building large-scale applications to using polyfills to bring the web's latest hotness to older browsers.</p>
             <p>Whilst Addy loves writing, his true passion is in helping move the web (even a little) forward. He's a member of the jQuery Core bug triage and docs teams and has also contributed to the open-source library, Modernizr.</p>
-            <p>Addy was with us last year also and you can still see his excelent talk, <a href="http://vimeo.com/44100359">JavaScript Decoupling Vs. The World</a>, in our video pool.</p>
+            <p>Addy was with us last year also and you can still see his excellent talk, <a href="http://vimeo.com/44100359">JavaScript Decoupling Vs. The World</a>, in our video pool.</p>
         </div>
 
         <div class="separator"></div>
