Fixed more typos

--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -47,7 +47,7 @@
         <article class="slot row_a">
             <a href="/speakers/#jan">
                 <div class="img" style="background-image: url(/gfx/front_jan.jpg);"></div>
-                <h2>Jan Lenhardt</h2>
+                <h2>Jan Lehnardt</h2>
             </a>
         </article>
 
