Typos and anchors

--- a/views/location.ejs
+++ b/views/location.ejs
@@ -16,19 +16,16 @@
     <article class="wrap">
 
         <p>
-          Everything releated to the conference happens within a 200m
-          radius of the venue. The pre-party, the conference, the
-          conference party and <a href="/openmic">Open Mic Night</a>
-          are all taking place within a few metres of the venue.
+          Everything related to the conference happens within a 200m radius of the venue. The pre-party, the conference, the conference party and <a href="/openmic">Open Mic Night</a> are all taking place within a few metres of the venue.
         </p>
 
         <div class="separator"></div>
 
+        <a name="the_venue"></a>
         <h1>The Venue</h1>
         <p>
           Our conference venue is <a target="_blank" href="http://www.fabrikken.no/">Fabrikken</a>, located in the newly constructed
-          area, <a target="_blank" href="http://www.vulkanoslo.no/">Vulkan</a>
-          , at <a target="_blank" href="http://en.wikipedia.org/wiki/Gr%C3%BCnerl%C3%B8kka">Grünerløkka</a>. The venue has brand new and
+          area, <a target="_blank" href="http://www.vulkanoslo.no/">Vulkan</a>, at <a target="_blank" href="http://en.wikipedia.org/wiki/Gr%C3%BCnerl%C3%B8kka">Grünerløkka</a>. The venue has brand new and
           modern facilities and is one of Norway's most energy
           efficient buildings with top notch air conditioning and high
           speed fiber internets.
@@ -40,6 +37,7 @@
           food served at the conference will be provided from these establishments.
         </p>
 
+        <a name="map"></a>
         <div class="imageFrame">
             <div class="images" id="locationimages" style="display: none;">
                 <a href="../gfx/venue_01.jpg" title="Previous picture" class="arrow prev">&lt;</a>
@@ -54,9 +52,11 @@
             <a id="togleButtonMap" class="toglerButton" href="#locationmap"><span>Map</span></a>
         </div>
 
+        <a name="getting_there"></a>
         <h2>Getting there</h2>
         <p>The address to the venue is <a href="https://maps.google.com/maps?q=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.922366,10.753341&sspn=0.003699,0.013078&dirflg=w&hq=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&t=m&z=15">Maridalsveien 13-17</a>.</p>
 
+        <a name="walking"></a>
         <h3>Walking</h3>
         <p>
           You can <a
@@ -64,6 +64,7 @@
           a map</a> created by the owners of a venue nearby.
         </p>
 
+        <a name="tram"></a>
         <h3>Tram</h3>
         <p>
           Tram lines 11, 12 and 13 all stop at <em>Schous plass</em>, where
@@ -71,6 +72,7 @@
           Vulkan. <a href="https://maps.google.com/maps?saddr=Schous+plass+%4059.920807,10.759322&daddr=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&sll=59.921947,10.759327&sspn=0.007399,0.026157&geocode=FadRkgMdmiykAA%3BFWBZkgMdpg2kACkxFrWeZW5BRjFlM5P44AGB6w&mra=ls&t=m&z=17">Get directions</a>.
         </p>
 
+        <a name="bus"></a>
         <h3>Bus</h3>
         <p>
           Buses 34 and 54 stop at <em>M&oslash;llerveien</em>. Walk down
@@ -78,6 +80,7 @@
           <a href="https://maps.google.com/maps?saddr=Maridalsveien&daddr=Scandic+Hotel+Vulkan,+Maridalsveien+13,+0175+Oslo,+Norway&hl=en&ll=59.921904,10.753341&spn=0.003699,0.013078&sll=59.920302,10.752321&sspn=0.0037,0.013078&geocode=FeVQkgMd5A2kAA%3BFWBZkgMdpg2kACkxFrWeZW5BRjFlM5P44AGB6w&dirflg=w&mra=mift&mrsp=0&sz=17&t=m&z=17">Get directions.</a>
         </p>
 
+        <a name="taxi"></a>
         <h3>Taxi</h3>
         <p>
           The address is <em>Maridalsveien 13-17</em>. Please note
@@ -86,6 +89,7 @@
 
         <div class="separator"></div>
 
+        <a name="stay_cheaply"></a>
         <h2>Stay cheaply</h2>
         <p>
           You can travel to Norway cheaply (No, Really)! <a target="_blank" href="http://norwegian.no/en/">Norwegian</a> and
@@ -105,6 +109,7 @@
 
         <div class="separator"></div>
 
+        <a name="to_and_from_oslo_airport"></a>
         <h2>To and from Oslo Airport</h2>
         <p>
           Whatever you do, don't grab a taxi from the
@@ -119,6 +124,7 @@
 
         <div class="separator"></div>
 
+        <a name="staying_in_oslo"></a>
         <h2>Staying in Oslo</h2>
         <p>
           There are several great hotels within walking distance of
@@ -127,6 +133,7 @@
           venue:
         </p>
 
+        <a name="scandic_hotel_vulkan"></a>
         <h3><a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Scandic Hotel Vulkan</a></h3>
         <p>
           Scandic Hotel Vulkan is the Web Rebels 2013 hotel partner.
@@ -137,6 +144,7 @@
           used at this hotel.
         </p>
 
+        <a name="ps:hotell"></a>
         <h3><a href="http://www.pshotell.no/">PS:Hotell</a></h3>
         <p>
           We're also happy that there is a cheaper hotel at the
@@ -144,6 +152,7 @@
           low prices.
         </p>
 
+        <a name="comfort_hotel_xpress_oslo"></a>
         <h3><a href="http://www.comforthotelxpress.no/">Comfort Hotel xPress Oslo</a></h3>
         <p>
           One of the coolest new hotels in the city, similar to the
@@ -156,6 +165,7 @@
 
         <div class="separator"></div>
 
+        <a name="splurge"></a>
         <h2>Splurge</h2>
         <p>
           If your company's paying anyway why not splurge? Unlike most other things in Norway, hotels in Oslo are
