--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,9 +14,9 @@
   <% include snips/menu.ejs %>
 
     <article class="wrap">
-        
+
         <img class="poster" src="/gfx/b12.jpg" width="680" height="350">
-        
+
         <h1>About the Web Rebels Conference</h1>
         <p>
             The Web Rebels conference takes place on the 23&ndash;24th
@@ -57,9 +57,12 @@
             ]webrebels.org&gt;">shoot us an email</a> or contact us <a
             href="http://twitter.com/web_rebels/">on the twitters</a>.
         </p>
+
+        <!--ul id="chat" class="hidden"></ul-->
     </article>
 
     <% include snips/footer.ejs %>
+    <!--script src="/js/streams.js"></script-->
 
 </body>
 </html>
