--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -8,6 +8,7 @@
             <a class="sponsor bekk" href="http://bekk.no"></a>
             <a class="sponsor comoyo" href="http://comoyo.no"></a>
             <a class="sponsor knowit" href="http://knowit.no"></a>
+            <a class="sponsor bouvet" href="http://bouvet.no"></a>
         </section>
 
         <aside>
